--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -25,7 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.40",
-    "react-router-dom": "^6.26.0",
+    "react-router-dom": "^6.25.1",
     "tailwindcss": "^3.4.7",
     "vite": "^5.3.4"
   }
